--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="logo"> Bački Gračac </div>
   
       <div class="meni">
-        <a href="index.html">Naslovna</a>
+        <a href="index.html">NASLOVNA</a>
         <a href="zanimljivosti.html">Zanimljivosti</a>
         <a href="kotakt.html">Kontakt</a>
         
