--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
       <div class="meni">
         <a href="index.html">NASLOVNA</a>
-        <a href="zanimljivosti.html">Zanimljivosti</a>
+        <a href="zanimljivosti.html">ZANIMLJIVOST</a>
         <a href="kotakt.html">Kontakt</a>
         
       </div>
