--- a/index.html
+++ b/index.html
@@ -1,40 +1,42 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <title>Naše mesto</title>
   <link rel="stylesheet" href="projekat.css">
 </head>
+
 <body>
 
-      <div class="logo"> Bački Gračac </div>
-  
-      <div class="meni">
-        <a href="index.html">NASLOVNA</a>
-        <a href="zanimljivosti.html">ZANIMLJIVOST</a>
-        <a href="kotakt.html">Kontakt</a>
-        
-      </div>
-    <img class="kontejner" src="backigracac.png">
+  <div class="logo"> Bački Gračac </div>
 
-    <div class="ngbaner">D O B R O &nbsp; D O Š L I </div>
+  <div class="meni">
+    <a href="index.html">Naslovna</a>
+    <a href="zanimljivosti.html">Zanimljivosti</a>
+    <a href="kotakt.html">Kontakt</a>
 
-    <div class="kontejner"> Saznajte nešto više o našem mestu!!!<br>
-      <button><a href="zanimljivosti.html">Detaljnije</a></button>
-    </div>
+  </div>
+  <img class="kontejner" src="backigracac.png">
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+  <div class="ngbaner">D O B R O &nbsp; D O Š L I </div>
+
+  <div class="kontejner"> Saznajte nešto više o našem mestu!!!<br>
+    <button><a href="zanimljivosti.html">Detaljnije</a></button>
+  </div>
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
 
 
-    <div class="footer"> @Orlovic</div>
-    </body>  
+  <div class="footer"> @Orlovic</div>
+</body>
