dodajem favicon i meta tagove

--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Naše mesto</title>
+  <title>Bački Gračac</title>
   <link rel="stylesheet" href="projekat.css">
-</head>
+
+  <meta name="keywords" content="ličani, vojvodina, seoski turizam">
+  <meta name="copyright" content="Bački Gračac Mesto">
+  <meta name="keywords" content="Bački Gračac ja malo mesto u opštini Odžaci koje nakon 2 sv. rata naseljavaju ličani.">
+
+  <link rel="icon" type="image/png" href="" </head>
 
 <body>
 
