--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <meta name="copyright" content="Bački Gračac Mesto">
   <meta name="keywords" content="Bački Gračac ja malo mesto u opštini Odžaci koje nakon 2 sv. rata naseljavaju ličani.">
 
-  <link rel="icon" type="image/png" href="" </head>
+  <link rel="icon" type="image/png" href="images/favicon-32x32.png" />
+
+</head>
 
 <body>
 
@@ -22,7 +24,7 @@
     <a href="kotakt.html">Kontakt</a>
 
   </div>
-  <img class="kontejner" src="backigracac.png">
+  <img class="kontejner" src="images/backigracac.png">
 
   <div class="ngbaner">D O B R O &nbsp; D O Š L I </div>
 
