--- a/zanimljivosti.html
+++ b/zanimljivosti.html
@@ -1,111 +1,117 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="UTF-8">
-  <title>Naše mesto</title>
-  <link rel="stylesheet" href="projekat.css">
+    <meta charset="UTF-8">
+    <title>Naše mesto</title>
+    <link rel="stylesheet" href="projekat.css">
 
-<style>
-.kontejner2 {
+    <style>
+        .kontejner2 {
 
-    width: 80%;
-    height: 200px;
-    border: 2px solid orange;
-    margin:auto;
-    padding: 10px;
-    text-align: justify;
+            width: 80%;
+            height: 200px;
+            border: 2px solid orange;
+            margin: auto;
+            padding: 10px;
+            text-align: justify;
 
-}
+        }
 
-.kontejner2 h{
-    font-size: 150%;
-}
+        .kontejner2 h {
+            font-size: 150%;
+        }
 
-.kontejner2 img {
-height: 150px;
-width:150px;
-float: left;
-margin: 4px;
+        .kontejner2 img {
+            height: 150px;
+            width: 150px;
+            float: left;
+            margin: 4px;
 
-}
+        }
 
-@media screen and (max-width: 600px) {
-    
-.kontejner2{
-    text-align: center;
-   height: 150px;
-    padding: 10px;
-}
+        @media screen and (max-width: 600px) {
 
-.kontejner2 img {
-display: none;
+            .kontejner2 {
+                text-align: center;
+                height: 150px;
+                padding: 10px;
+            }
 
-}
-}
+            .kontejner2 img {
+                display: none;
+
+            }
+        }
 
 
-.kontejner2 a {
-color: blueviolet;
-}
+        .kontejner2 a {
+            color: blueviolet;
+        }
 
-.kontejner2 a:hover {
+        .kontejner2 a:hover {
 
-color: red;    
-}
+            color: red;
+        }
 
-.kontejner2 a:active{
+        .kontejner2 a:active {
 
-    columns: rgb(23, 181, 230);
-}
-
-</style>
+            columns: rgb(23, 181, 230);
+        }
+    </style>
 
 </head>
 
 <body>
-    <div class="logo">  Bački Gračac  </div>
+    <div class="logo"> Bački Gračac </div>
 
-   
+
     <div class="meni">
         <a href="index.html">Naslovna</a>
         <a href="zanimljivosti.html">Zanimljivosti</a>
         <a href="kotakt.html">Kontakt</a>
-        
-      </div>
 
-<br>
-<div class="kontejner2">
-    <img src="geo.png" alt="Slika">
-    <h>Opšti podaci</h>
-<p>  Bački Gračac (nem. Filipsdorf ili Filipowa, mađ. Szentfülöp) je selo u opštini Odžaci, u Zapadnobačkom okrugu, u autonomnoj pokrajini Vojvodini. Prema popisu iz 2011. bilo je 2286 stanovnika, a prema popisu stanovništva iz 2002. godine selo je imalo 2913 stanovnika, od kojih su 2810 srpske nacionalnosti. </p>
+    </div>
 
-</div>
+    <br>
+    <div class="kontejner2">
+        <img src="images/geo.png" alt="Slika">
+        <h>Opšti podaci</h>
+        <p> Bački Gračac (nem. Filipsdorf ili Filipowa, mađ. Szentfülöp) je selo u opštini Odžaci, u Zapadnobačkom
+            okrugu, u autonomnoj pokrajini Vojvodini. Prema popisu iz 2011. bilo je 2286 stanovnika, a prema popisu
+            stanovništva iz 2002. godine selo je imalo 2913 stanovnika, od kojih su 2810 srpske nacionalnosti. </p>
 
-<br>
-<div class="kontejner2">
-    <img src="filipovo.jpg" alt="Slika">
-    <h>Ime kroz istoriju</h>
-<p>Raniji nazivi sela koji su se upotrebljavali u srpskom jeziku bili su Filipovo i Filipovo Selo, iz čega vodi poreklo i nemački naziv — Filipowa ili Filipsdorf. U nemačkom jeziku su korišćeni i nazivi Kindlingen i Sankt Philipp, dok su u mađarskom jeziku korišćeni nazivi Szentfülöp i Szent-Fülöp.</p>
-</div>
+    </div>
 
-<br>
-<div class="kontejner2">
-    <img src="svIlija.jpg" alt="Slika">
-    <h>Seoska slava</h>
-<p>    Seoska slava je Sveti Ilija koji se proslavlja 02. avgusta. Tokom slave održavaju se brojne manifestacija kulturne i sportske sadržine</p>
+    <br>
+    <div class="kontejner2">
+        <img src="images/filipovo.jpg" alt="Slika">
+        <h>Ime kroz istoriju</h>
+        <p>Raniji nazivi sela koji su se upotrebljavali u srpskom jeziku bili su Filipovo i Filipovo Selo, iz čega vodi
+            poreklo i nemački naziv — Filipowa ili Filipsdorf. U nemačkom jeziku su korišćeni i nazivi Kindlingen i
+            Sankt Philipp, dok su u mađarskom jeziku korišćeni nazivi Szentfülöp i Szent-Fülöp.</p>
+    </div>
 
-</div>
+    <br>
+    <div class="kontejner2">
+        <img src="images/svIlija.jpg" alt="Slika">
+        <h>Seoska slava</h>
+        <p> Seoska slava je Sveti Ilija koji se proslavlja 02. avgusta. Tokom slave održavaju se brojne manifestacija
+            kulturne i sportske sadržine</p>
 
-<br>
-<div class="kontejner2">
-    <img src="licani.jpg" alt="Slika">
-    <h>Ličani</h>
-<p>    Najevići broj meštana čine potomci ličana koji su se naselili iz predela današnje Hrvatske u ove krajeve nakon drugog svetskog rata.</p>
+    </div>
 
-</div>
+    <br>
+    <div class="kontejner2">
+        <img src="images/licani.jpg" alt="Slika">
+        <h>Ličani</h>
+        <p> Najevići broj meštana čine potomci ličana koji su se naselili iz predela današnje Hrvatske u ove krajeve
+            nakon drugog svetskog rata.</p>
+
+    </div>
 
 
-<div class="footer"> @Orlovic</div>
+    <div class="footer"> @Orlovic</div>
 </body>
 
 </html>
