--- a/index.html
+++ b/index.html
@@ -12,18 +12,36 @@
 
   <link rel="icon" type="image/png" href="images/favicon-32x32.png" />
 
+  <meta property="og:url" content="https://orlovic982.github.io/backigracac/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Bački Gračac" />
+  <meta property="og:description"
+    content="Bački Gračac ja malo mesto u opštini Odžaci koje nakon 2 sv. rata naseljavaju ličani." />
+  <meta property="og:image" content="https://orlovic982.github.io/backigracac/images/backigracac.png" />
+
+
 </head>
 
 <body>
 
-  <div class="logo"> Bački Gračac </div>
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/sr_RS/sdk.js#xfbml=1&version=v12.0"
+    nonce="xVb2b0Pz"></script>
+
 
   <div class="meni">
+    <a href="index.html">BAČKI GRAČAC</a>
     <a href="index.html">Naslovna</a>
     <a href="zanimljivosti.html">Zanimljivosti</a>
     <a href="kotakt.html">Kontakt</a>
 
   </div>
+  <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <div class="fb-share-button" data-href="https://orlovic982.github.io/backigracac/" data-layout="button"
+    data-size="small"><a target="_blank"
+      href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Forlovic982.github.io%2Fbackigracac%2F&amp;src=sdkpreparse"
+      class="fb-xfbml-parse-ignore">Подели</a></div>
   <img class="kontejner" src="images/backigracac.png">
 
   <div class="ngbaner">D O B R O &nbsp; D O Š L I </div>
@@ -46,4 +64,15 @@
 
 
   <div class="footer"> @Orlovic</div>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LZ7KNXQLDK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-LZ7KNXQLDK');
+  </script>
+
+
 </body>
