--- a/kotakt.html
+++ b/kotakt.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Naše mesto</title>
+  <title>Kontakt | Bački Gračac</title>
   <link rel="stylesheet" href="projekat.css">
   <style>
     .forma {
@@ -31,9 +31,10 @@
 </head>
 
 <body>
-  <div class="logo"> Bački Gračac </div>
+
 
   <div class="meni">
+    <a href="index.html">BAČKI GRAČAC</a>
     <a href="index.html">Naslovna</a>
     <a href="zanimljivosti.html">Zanimljivosti</a>
     <a href="kotakt.html">Kontakt</a>
