--- a/zanimljivosti.html
+++ b/zanimljivosti.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Naše mesto</title>
+    <title>Zanimljivosti | Bački Gračac</title>
     <link rel="stylesheet" href="projekat.css">
 
     <style>
@@ -63,10 +63,11 @@
 </head>
 
 <body>
-    <div class="logo"> Bački Gračac </div>
+
 
 
     <div class="meni">
+        <a href="index.html">BAČKI GRAČAC</a>
         <a href="index.html">Naslovna</a>
         <a href="zanimljivosti.html">Zanimljivosti</a>
         <a href="kotakt.html">Kontakt</a>
