male izmene naslovne strane

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Bački Gračac</title>
   <link rel="stylesheet" href="projekat.css">
 
-  <meta name="keywords" content="ličani, vojvodina, seoski turizam">
+  <meta name="keywords" content="ličani, vojvodina, seoski turizam, selo turizam, војводина">
   <meta name="copyright" content="Bački Gračac Mesto">
   <meta name="keywords" content="Bački Gračac ja malo mesto u opštini Odžaci koje nakon 2 sv. rata naseljavaju ličani.">
 
@@ -50,20 +50,22 @@
     data-size="small"><a target="_blank"
       href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Forlovic982.github.io%2Fbackigracac%2F&amp;src=sdkpreparse"
       class="fb-xfbml-parse-ignore">Подели</a></div>
-  <img class="kontejner" src="images/backigracac.png">
+  <img class="kontejner" src="images/backigracac.png" alt="Backi Gracac">
 
   <div class="ngbaner">D O B R O &nbsp; D O Š L I </div>
 
-  <div class="kontejner"> Saznajte nešto više o našem mestu!!!<br>
+  <div class="kontejner">
     <button><a href="zanimljivosti.html">Detaljnije</a></button>
   </div>
 
   <br>
   <br>
   <br>
-  <br>
-  <br>
-  <br>
+  <div style="margin: auto; text-align: center; font-family:Georgia, 'Times New Roman', Times, serif; color:red;">
+    <h1> Vojvodina i ličani</h1>
+    <p>U našem malom mestu možete uživati u pravom seoskom turizmu ispunjenom harmonijom i lepotom. </p>
+  </div>
+
   <br>
   <br>
   <br>
