--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Bački Gračac</title>
   <link rel="stylesheet" href="projekat.css">
-
+  g
   <meta name="keywords" content="ličani, vojvodina, seoski turizam, selo turizam, војводина">
   <meta name="copyright" content="Bački Gračac Mesto">
   <meta name="keywords" content="Bački Gračac ja malo mesto u opštini Odžaci koje nakon 2 sv. rata naseljavaju ličani.">
@@ -27,10 +27,13 @@
     gtag('config', 'G-LZ7KNXQLDK');
   </script>
 
+  <script
+    type="text/javascript"> let headID = document.getElementsByTagName("head")[0]; let newCss = document.createElement('link'); newCss.rel = 'stylesheet'; newCss.type = 'text/css'; newCss.href = "https://botmake.io/embed/bot1220357.css"; let newScript = document.createElement('script'); newScript.src = "https://botmake.io/embed/bot1220357.js"; newScript.type = 'text/javascript'; headID.appendChild(newScript); headID.appendChild(newCss); </script>
 
 </head>
 
 <body>
+
 
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/sr_RS/sdk.js#xfbml=1&version=v12.0"
