--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
   <br>
   <br>
   <br>
+  <iframe width="50%" height="800" frameBorder="0" src="https://botmake.io/mane-i-dane?preview=yes"></iframe>
 
 
   <script
